--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "chalk": "^4.1.0",
+    "inquirer": "^6.5.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
